JDT Core 3.12.1 courtesy of @felixdo